# hype

./: .gitignore  LICENSE.md  README.md  example.py  pyproject.toml
.github/workflows/: ci.yaml
examples/: gui.py  interactive.py  mcp.py  output_shaping.py  rag.py  rpc.py  sudoku.py  system_events.py  text_analysis.py  tool_use.py  web_scraping.py
src/hype/: __init__.py  cli.py  function.py  job.py  task.py
src/hype/cli/: __init__.py  utils.py
src/hype/cli/commands/: __init__.py  run.py  serve.py
src/hype/gui/: __init__.py  gradio.py
src/hype/http/: __init__.py  accept.py  prefer.py  problem.py
src/hype/mcp/: __init__.py  jsonrpc.py  sse.py  stdio.py
src/hype/tools/: __init__.py  anthropic.py  ollama.py  openai.py
src/hype/types/: data.py  file.py
tests/: test_app.py  test_cli.py  test_content_negotiation.py  test_data.py  test_file.py  test_function.py  test_gui.py  test_mcp_sse.py  test_mcp_stdio.py  test_problem_details.py  test_request_preference.py  test_tools.py
